--- a/style.css
+++ b/style.css
@@ -556,6 +556,10 @@ section{
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 3rem;
   }
+
+  .skills-description {
+    font-size: 16px;
+  }
   
   .education {
     display: flex;
@@ -606,7 +610,7 @@ section{
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 1.5rem;
-    
+    font-size: 14px;
   }
   
   .skills-right ul {
